2008-12-01  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Add deprecation warnings for signals and properties. Also reuse code
	  for since and stability levels there. Fixes #562655.

	* tests/gobject/src/gobject.c:
	  Add testcase for #562655.

2008-12-01  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-scangobj.in:
	* gtkdoc-scanobj.in:
	  Reintroduce "sh -c" and comment why its used. Add real libtool support
	  to old scanobj tool as well.

2008-12-01  Stefan Kost  <ensonic@users.sf.net>

	patch by: Matthias Clasen  <mclasen@redhat.com>

	* gtkdoc-mkdb.in:
	  Fix index-id generation for child and style properties. Fixes #562064.

2008-11-16  Stefan Kost  <ensonic@users.sf.net>

	* HACKING:
	* configure.in:
	* help/manual/C/gtk-doc-manual.xml:
	  Back to development.
	  
===  Release 1.11 ===

2008-11-16  Stefan Kost  <ensonic@users.sf.net>

	* HACKING:
	* NEWS:
	  Releasing 1.11.

	* tests/Makefile.am:
	* tests/gtk-doc.make:
	* tests/gtk-doc.notmpl.make:
	* tests/gtkdoctest.sh:
	  Fix make distcheck.

2008-11-06  Stefan Kost  <ensonic@users.sf.net>

	* tests/gtk-doc.make:
	* tests/gtk-doc.notmpl.make:
	  No install rules for test.

2008-11-06  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Get rid of german variable name. Generate glossary xml for 
	  annotations. Improve initial master document.

	* tests/annotations/docs/tester-docs.xml:
	  Update example to include anotation glossary.

2008-11-05  Stefan Kost  <ensonic@users.sf.net>

	patch by: Peter Kjellerstedt <pkj@axis.com>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	* tests/gtk-doc.make:
	* tests/gtk-doc.notmpl.make:
	  Correct check for existance of gtkdoc-rebase (better fix than the
	  previous one #508897). Fixes #559281.

2008-10-27  Stefan Kost  <ensonic@users.sf.net>

	patch by: Christian Persch <chpe@gnome.org>

	* gtkdoc-scangobj.in:
	  Fix doc build when using GTK_DISABLE_SINGLE_INCLUDES. Fixes #558082.

2008-10-20  Stefan Kost  <ensonic@users.sf.net>

	* TODO: