@@ -1,3 +1,8 @@
+2008-12-02  Stefan Kost  <ensonic@users.sf.net>
+
+	* gtkdoc-mkdb.in:
+	  Don't touch doctype header in expand-content-files.
+
 2008-12-01  Stefan Kost  <ensonic@users.sf.net>
 
 	* gtkdoc-mkdb.in:
